--- a/client/src/pages/Lobby/Lobby.css
+++ b/client/src/pages/Lobby/Lobby.css
@@ -1,4 +1,39 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  /* justify-content: center; */
+  display: flex;
+  flex-direction: row;
+  /* align-items: ; */
+  justify-content: space-around;
+  /* align-items: center; */
+  /* width: 80%; */
+  overflow: auto;
+}
+
+.chat {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.participants {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
 .chat-input {
   position: fixed;
   bottom: 0;
+  width: 100%;
+  z-index: 100;
+  background-color: white;
 }
