Sweet spot. Working game with some bugs.

--- a/client/src/pages/Lobby/Lobby.css
+++ b/client/src/pages/Lobby/Lobby.css
@@ -38,7 +38,7 @@ html, body {
   background-color: white;
 }
 
-.existing-game-toast .MuiPaper-root {
+.game-toast .MuiPaper-root {
   background-color: white;
   color: black;
 }
